--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,30 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="hammer"></ion-icon>
+      <ion-label>Tools</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Map</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4" href="/tabs/tab4">
+      <ion-icon name="chatbubble-ellipses"></ion-icon>
+      <ion-label>AI</ion-label>
+    </ion-tab-button>
+
+    <!-- 👇 NEW AR BUTTON 👇 -->
+<ion-tab-button tab="tab5" href="/tabs/tab5">
+  <ion-icon name="timer-outline"></ion-icon>
+  <ion-label>Timer</ion-label>
+</ion-tab-button>
+
   </ion-tab-bar>
 </ion-tabs>
